# RepoMind-V2

./: .env.example  .gitignore  LICENSE  README.md  REPOMIND_CHANGES.md  _check_setup.py  current_env.json  pyproject.toml  repomind-deployer-secrets-policy.json  requirements-dev.txt  requirements.txt  run_local.py  template.yaml  test_local_pipeline.py
agents/: __init__.py  checkpointer.py  deep_solver.py  graph.py  hitl_nodes.py  llm_judge.py  models.py  nodes.py
code_quality/: __init__.py  code_checker.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
monitoring/: _build_dashboard.py  dashboard-preview.html  docker-compose.yml  prometheus.yml
monitoring/provisioning/dashboards/: dashboard.yml
monitoring/provisioning/dashboards/json/: repomind-dashboard.json
monitoring/provisioning/datasources/: datasource.yml
observability/: __init__.py  killswitch.py  metrics.py
planner/: __init__.py  planner.py
policy/: default.yaml
policy_engine/: __init__.py  policy.py
pr_creator/: __init__.py  comment_poster.py  pr_creator.py  welcome_pr.py
projectdocs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  GLOSSARY.md  HLD.md  HOW_TO_RUN.md  INSTALLATION.md  LANGGRAPH_PIPELINE.md  LLD.md  PIPELINE_WORKFLOW.md  README.md  REPO_STRUCTURE.md  SECURITY.md  TECH_STACK.md  TESTING.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
rag/: __init__.py  embedder.py  indexer.py  rag_metrics.py  retriever.py
review/: __init__.py  models.py  review_handler.py
scripts/: test_email_design.py  test_notify_hooks.py  test_secrets_smtp.py  test_smtp.py  test_worker_notifications.py
shared/: __init__.py  azure_llm.py  config.py  email_templates.py  event_id.py  github_auth.py  llm_observability.py  logger.py  notifier.py  notify_hooks.py  repomind_config.py  secrets.py  storage.py  timeline.py
tests/: test_code_quality.py  test_comment_poster.py  test_deep_solver.py  test_excerpt.py  test_github_auth_multitenant.py  test_graph.py  test_hitl.py  test_llm_observability.py  test_observability.py  test_policy.py  test_policy_user_config.py  test_pr_creator_modes.py  test_rag.py  test_rag_metrics.py  test_repomind_config.py  test_review.py  test_sanitizer.py  test_signature.py  test_triage.py  test_verifier.py  test_webhook.py  test_welcome_pr.py
triage/: __init__.py  triage.py
verifier/: __init__.py  models.py  rollback.py  verifier.py
webhook/: __init__.py  lambda_handler.py  models.py  signature.py  sqs_client.py  webhook_handler.py
worker/: __init__.py  excerpt.py  log_fetcher.py  main.py  sanitizer.py
